# Pictel-sound

./: .gitignore  CMakeLists.txt  LICENSE  README.md
projects/windows/: Pictel-sample-app.cpp  Pictel-sample-app.vcxproj  Pictel-sample-app.vcxproj.filters  Pictel-sound.cpp  Pictel-sound.sln  Pictel-sound.vcxproj  Pictel-sound.vcxproj.filters
projects/xcode/Pictel-sound.xcodeproj/: project.pbxproj
projects/xcode/Pictel-sound.xcodeproj/xcshareddata/xcschemes/: Pictel-cmd-sample-app.xcscheme  Pictel-iOS-sample.xcscheme  Pictel-sound.xcscheme
src/pictel-sound-lib/: decoder_interface.h  decoder_vorbis.cpp  decoder_vorbis.hpp  interfaces.h  library.cpp  pictel-sound.cpp  pictel_sound_file.cpp  pictel_sound_file.hpp  pictel_sound_library.cpp  player.cpp  player.hpp
src/pictel-sound-lib/include/: pictel-sound.h  pictel_sound.h  pictel_sound.hpp
src/pictel-sound-lib/platform/macos/: system_audio_macos.h  system_audio_macos.mm
src/pictel-sound-lib/platform/shared/: README.txt
src/pictel-sound-lib/platform/shared/miniaudio/extras/: miniaudio_libvorbis.h
src/pictel-sound-lib/platform/windows/: system_audio_manager.cpp  system_audio_manager.h  system_audio_windows.cpp  system_audio_windows.h
src/pictel-sound-sample/iOS/: ContentView.swift  PictelSoundPlayer.h  PictelSoundPlayer.mm  Pictem-iOS-sample-Bridging-Header.h  Pictem_iOS_sampleApp.swift
src/pictel-sound-sample/macos/: main.cpp  main.mm
src/pictel-sound-sample/windows/: main.cpp
